--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,15 @@
 [package]
 name = "plmidi"
-version = "0.4.0"
+description = "Play MIDI files from the command line."
+version = "0.5.0"
 edition = "2018"
 authors = [ "Taylan Gökkaya <insomnimus.dev@gmail.com>" ]
 license = "MIT"
+repository = "https://github.com/insomnimus/plmidi"
+keywords = [ "midi", "music", "cli" ]
 
 [dependencies]
 clap = "3.0.0-beta.4"
 midir = "0.7.0"
 midly = "0.5.2"
-nodi = { version = "0.2.*", features = [ "midir" ] }
+nodi = { version = "0.5.0", features = [ "midir" ] }
