ci: added new target: aarch64-linux

--- a/.cargo/config
+++ b/.cargo/config
@@ -9,3 +9,9 @@ rustflags = [
 	"-Clink-arg=-undefined",
 	"-Clink-arg=dynamic_lookup",
 ]
+
+[target.aarch64-unknown-linux-gnu]
+rustflags = [
+	"-Ctarget-feature=+crt-static",
+	"-Clink-arg=-lm",
+]
