--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,7 @@
   ],
   "jobs": {
     "test": {
+      "if": "github.ref == 'refs/head/main' || startsWith(github.ref, 'refs/tags/')",
       "strategy": {
         "matrix": {
           "include": [
@@ -110,6 +111,11 @@
               "name": "plmidi-windows-x86.zip"
             },
             {
+              "os": "ubuntu-latest",
+              "target": "aarch64-unknown-linux-gnu",
+              "name": "plmidi-linux-aarch64.tar.gz"
+            },
+            {
               "os": "macos-11",
               "target": "aarch64-apple-darwin",
               "name": "plmidi-osx-aarch64.tar.gz"
@@ -133,7 +139,7 @@
         },
         {
           "name": "Setup | Install Dependencies",
-          "if": "matrix.os == 'ubuntu-latest'",
+          "if": "matrix.target == 'x86_64-unknown-linux-gnu'",
           "env": {
             "DEBIAN_FRONTEND": "noninteractive"
           },
@@ -154,7 +160,8 @@
           "uses": "actions-rs/cargo@v1.0.3",
           "with": {
             "command": "build",
-            "args": "--release --locked --target ${{ matrix.target }}"
+            "args": "--release --locked --target ${{ matrix.target }}",
+            "use-cross": "${{ matrix.target == 'aarch64-unknown-linux-gnu' }}"
           }
         },
         {
