--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,8 @@
     "pull_request"
   ],
   "jobs": {
-    "test": {github.ref == 'refs/head/main' || startsWith(github.ref, 'refs/tags/')",
+    "test": {
+      "if": "github.ref == 'ref/head/main' || startsWith(github.ref, 'refs/tags/')",
       "strategy": {
         "matrix": {
           "include": [
