--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "plmidi"
 description = "Play MIDI files from the command line."
-version = "0.6.0"
+version = "0.7.0"
 edition = "2018"
 authors = [ "Taylan Gökkaya <insomnimus.dev@gmail.com>" ]
 license = "MIT"
@@ -10,6 +10,8 @@ keywords = [ "midi", "music", "cli" ]
 
 [dependencies]
 clap = "3.0.0-beta.4"
+log = "0.4.14"
 midir = "0.7.0"
 midly = "0.5.2"
-nodi = { version = "0.7.1", features = [ "midir" ] }
+nodi = { version = "0.8.0", features = [ "midir" ] }
+simple_logger = { version = "1.13.0", features = ["stderr"], default-features = false }
