--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "plmidi"
 description = "Play MIDI files from the command line."
-version = "0.7.0"
+version = "0.8.0"
 edition = "2018"
 authors = [ "Taylan Gökkaya <insomnimus.dev@gmail.com>" ]
 license = "MIT"
@@ -9,9 +9,11 @@ repository = "https://github.com/insomnimus/plmidi"
 keywords = [ "midi", "music", "cli" ]
 
 [dependencies]
+anyhow = "1.0.44"
 clap = "3.0.0-beta.4"
+crossterm = "0.21.0"
 log = "0.4.14"
 midir = "0.7.0"
 midly = "0.5.2"
-nodi = { version = "0.9.2", features = [ "midir" ] }
+nodi = { version = "0.10.2", features = [ "midir" ] }
 simple_logger = { version = "1.13.0", features = ["stderr"], default-features = false }
