--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "plmidi"
 description = "Play MIDI files from the command line."
-version = "0.8.1"
+version = "0.9.0"
 edition = "2018"
 authors = [ "Taylan Gökkaya <insomnimus.dev@gmail.com>" ]
 license = "MIT"
@@ -14,5 +14,10 @@ crossterm = "0.21.0"
 log = "0.4.14"
 midir = "0.7.0"
 midly = "0.5.2"
-nodi = { version = "0.10.2", features = [ "midir" ] }
+nodi = { version = "0.12.0", features = ["hybrid-sleep"], optional = true }
 simple_logger = { version = "1.13.0", features = ["stderr"], default-features = false }
+
+[features]
+default = ["nodi/midir"]
+jack = ["nodi/jack"]
+winrt = ["nodi/winrt"]
