--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,13 @@ edition = "2018"
 authors = [ "Taylan Gökkaya <insomnimus.dev@gmail.com>" ]
 license = "MIT"
 repository = "https://github.com/insomnimus/plmidi"
-keywords = [ "midi", "music", "cli" ]
+categories = ["command-line-utilities", "multimedia::audio", "multimedia::encoding"]
+keywords = ["midi", "music", "smf"]
+readme = "readme.md"
+
+[package.metadata.docs.rs]
+default-target = "x86_64-pc-windows-msvc" # avoids the need to download C dependencies
+targets = []
 
 [dependencies]
 clap = "3.0.0-beta.4"
