--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,14 +78,14 @@
               "os": "windows-latest"
             },
             {
-            "target": "x86_64-apple-darwin",
-            "name": "plmidi-x86_64-osx.tar.gz",
-            "os": "macos-11"
+              "target": "x86_64-apple-darwin",
+              "name": "plmidi-x86_64-osx.tar.gz",
+              "os": "macos-11"
             },
             {
-            "target": "aarch64-apple-darwin",
-            "name": "plmidi-aarch64-osx.tar.gz",
-            "os": "macos-11"
+              "target": "aarch64-apple-darwin",
+              "name": "plmidi-aarch64-osx.tar.gz",
+              "os": "macos-11"
             },
             {
               "target": "i686-pc-windows-msvc",
@@ -200,6 +200,35 @@
           "with": {
             "files": "plmidi-*/plmidi-*",
             "body_path": "RELEASE.md"
+          }
+        }
+      ]
+    },
+    "publish": {
+      "name": "Publish to crates.io",
+      "if": "github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')",
+      "needs": "test",
+      "runs-on": "windows-latest",
+      "steps": [
+        {
+          "name": "Setup | Checkout",
+          "uses": "actions/checkout@v2.3.4"
+        },
+        {
+          "name": "Setup | Rust",
+          "uses": "actions-rs/toolchain@v1.0.7",
+          "with": {
+            "toolchain": "stable",
+            "override": true,
+            "profile": "minimal"
+          }
+        },
+        {
+          "name": "Deploy | Publish",
+          "uses": "actions-rs/cargo@v1.0.3",
+          "with": {
+            "command": "publish",
+            "args": "--token ${{ secrets.CRATES_IO_TOKEN }}"
           }
         }
       ]
