--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "plmidi"
 description = "Play MIDI files from the command line."
-version = "0.9.3"
+version = "0.9.4"
 edition = "2018"
 authors = [ "Taylan Gökkaya <insomnimus.dev@gmail.com>" ]
 license = "MIT"
@@ -11,13 +11,13 @@ keywords = ["midi", "music", "smf"]
 readme = "readme.md"
 
 [dependencies]
-clap = "3.0.0-beta.5"
-crossterm = "0.21.0"
+clap = { version = "3.0.0-rc.7", features = ["cargo", "unicode", "wrap_help"] }
+crossterm = "0.22.1"
 log = "0.4.14"
 midir = "0.7.0"
 midly = "0.5.2"
 nodi = { version = "0.13.2", features = ["hybrid-sleep"], optional = true }
-simple_logger = { version = "1.13.0", features = ["stderr"], default-features = false }
+simple_logger = { version = "1.16.0", features = ["stderr"], default-features = false }
 
 [features]
 default = ["nodi/midir"]
