--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "plmidi"
 description = "Play MIDI files from the command line."
-version = "0.9.4"
+version = "0.9.5"
 edition = "2018"
 authors = [ "Taylan Gökkaya <insomnimus.dev@gmail.com>" ]
 license = "MIT"
@@ -11,7 +11,7 @@ keywords = ["midi", "music", "smf"]
 readme = "readme.md"
 
 [dependencies]
-clap = { version = "3.0.0-rc.7", features = ["cargo", "unicode", "wrap_help"] }
+clap = { version = "3.0.0", features = ["cargo", "unicode", "wrap_help"] }
 crossterm = "0.22.1"
 log = "0.4.14"
 midir = "0.7.0"
