--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@
           "uses": "actions-rs/cargo@v1.0.3",
           "with": {
             "command": "test",
-            "args": "--target ${{ matrix.target }}"
+            "args": "--target ${{ matrix.target }} --features fluid-bundled"
           }
         }
       ]
@@ -142,7 +142,7 @@
           "uses": "actions-rs/cargo@v1.0.3",
           "with": {
             "command": "build",
-            "args": "--release --target ${{ matrix.target }}",
+            "args": "--release --target ${{ matrix.target }} --features fluid-bundled",
             "use-cross": "${{ matrix.os == 'ubuntu-latest' && matrix.target != 'x86_64-unknown-linux-gnu' }}"
           }
         },
