--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "plmidi"
 description = "Play MIDI files from the command line."
-version = "0.11.0"
+version = "0.11.1"
 edition = "2021"
 authors = [ "Taylan Gökkaya <insomnimus@protonmail.com>" ]
 license = "MIT"
@@ -24,7 +24,7 @@ crossterm = "0.23.2"
 log = "0.4.17"
 midir = "0.8.0"
 midly = "0.5.2"
-nodi = { version = "0.15.2", features = ["hybrid-sleep"], optional = true }
+nodi = { version = "0.15.2", features = ["hybrid-sleep"] }
 simple_logger = { version = "2.1.0", features = ["stderr"], default-features = false }
 
 # optional dependencies
