--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "plmidi"
 description = "Play MIDI files from the command line."
-version = "0.12.0"
+version = "0.13.0"
 edition = "2021"
 authors = [ "Taylan Gökkaya <insomnimus@protonmail.com>" ]
 license = "MIT"
@@ -29,5 +29,6 @@ crossterm = { version = "0.23.2", features = ["event-stream"] }
 futures = { version = "0.3.21", features = ["executor"] }
 log = "0.4.17"
 midir = "0.8.0"
-nodi = { version = "0.18.1", features = ["hybrid-sleep", "midir"] }
+# nodi = { version = "0.19.0", features = ["hybrid-sleep", "midir"] }
+nodi = { git = "https://github.com/insomnimus/nodi", features = ["hybrid-sleep", "midir"] }
 simple_logger = { version = "2.1.0", default-features = false, features = ["stderr", "colored"] }
