--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@
           "uses": "actions-rs/cargo@v1.0.3",
           "with": {
             "command": "test",
-            "args": "--target ${{ matrix.target }} --features fluid-bundled"
+            "args": "--target ${{ matrix.target }} --features 'fluid-bundled system'"
           }
         }
       ]
@@ -142,7 +142,7 @@
           "uses": "actions-rs/cargo@v1.0.3",
           "with": {
             "command": "build",
-            "args": "--release --target ${{ matrix.target }} --features fluid-bundled",
+            "args": "--release --target ${{ matrix.target }} --features 'fluid-bundled system'",
             "use-cross": "${{ matrix.os == 'ubuntu-latest' && matrix.target != 'x86_64-unknown-linux-gnu' }}"
           }
         },
@@ -192,7 +192,7 @@
         },
         {
           "name": "Setup | Release notes",
-          "run": "GO111MODULE=on go install github.com/git-chglog/git-chglog/cmd/git-chglog@0.9.1\ngit-chglog -c .github/chglog/release.yml $(git describe --tags) > RELEASE.md\n"
+          "run": "GO111MODULE=on go install github.com/git-chglog/git-chglog/cmd/git-chglog@0.9.1\ngit-chglog -c .github/chglog/release.yml \"$(git describe --tags)\" > RELEASE.md"
         },
         {
           "name": "Deploy | Publish",
