--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "plmidi"
 description = "Play MIDI files from the command line."
-version = "0.13.1"
+version = "0.14.0"
 edition = "2021"
 authors = [ "Taylan Gökkaya <insomnimus@protonmail.com>" ]
 license = "MIT"
@@ -11,16 +11,18 @@ keywords = ["midi", "music", "smf"]
 readme = "readme.md"
 
 [features]
-default = []
-jack = ["nodi/midir-jack"]
-winrt = ["nodi/midir-winrt"]
-fluid = ["fluidlite/pkg-config", "cpal", "parking_lot"]
-fluid-bundled = ["fluidlite/builtin", "cpal", "parking_lot"]
+default = ["fluid-bundled"]
+system = ["nodi/midir", "midir"]
+system-jack = ["system", "nodi/midir-jack"]
+system-winrt = ["system", "nodi/midir-winrt"]
+fluid = ["fluidlite/pkg-config", "cpal", "parking_lot", "clap/env"]
+fluid-bundled = ["fluidlite/builtin", "cpal", "parking_lot", "clap/env"]
 
 [dependencies]
 # Optional dependencies
 cpal = { version = "0.13.5", optional = true }
 fluidlite = { version = "0.2.1", optional = true, features = ["static"] }
+midir = { version = "0.8.0", optional = true }
 parking_lot = { version = "0.12.1", optional = true }
 
 # Required dependencies
@@ -28,8 +30,8 @@ clap = { version = "3.1.18", features = ["cargo", "unicode", "wrap_help"] }
 crossterm = { version = "0.23.2", features = ["event-stream"] }
 futures = { version = "0.3.21", features = ["executor"] }
 log = "0.4.17"
-midir = "0.8.0"
-nodi = { version = "0.19.0", features = ["hybrid-sleep", "midir"] }
+nodi = { version = "0.19.0", features = ["hybrid-sleep"] }
 simple_logger = { version = "2.1.0", default-features = false, features = ["stderr", "colored"] }
 rand = "0.8.5"
 wild = "2.0.4"
+cfg-if = "1.0.0"
