--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "plmidi"
 description = "Play MIDI files from the command line."
-version = "0.14.2"
+version = "1.0.1"
 edition = "2021"
 authors = [ "Taylan Gökkaya <insomnimus@protonmail.com>" ]
 license = "MIT"
@@ -10,6 +10,11 @@ categories = ["command-line-utilities", "multimedia::audio", "multimedia::encodi
 keywords = ["midi", "music", "smf"]
 readme = "readme.md"
 
+[profile.release]
+strip = "symbols"
+panic = "abort"
+lto = "fat"
+
 [features]
 default = ["fluid-bundled"]
 system = ["nodi/midir"]
@@ -17,20 +22,21 @@ system-jack = ["system", "nodi/midir-jack"]
 system-winrt = ["system", "nodi/midir-winrt"]
 fluid = ["fluidlite/pkg-config", "cpal", "parking_lot", "clap/env"]
 fluid-bundled = ["fluidlite/builtin", "cpal", "parking_lot", "clap/env"]
+fluid-use-bindgen = ["fluidlite/bindgen"]
 
 [dependencies]
 # Optional dependencies
-cpal = { version = "0.13.5", optional = true }
+cpal = { version = "0.15.2", optional = true }
 fluidlite = { version = "0.2.1", optional = true, features = ["static"] }
 parking_lot = { version = "0.12.1", optional = true }
 
 # Required dependencies
 clap = { version = "=3.1.18", features = ["cargo", "unicode", "wrap_help"] }
-crossterm = { version = "0.23.2", features = ["event-stream"] }
-futures = { version = "0.3.21", features = ["executor"] }
-log = "0.4.17"
-nodi = { version = "0.19.2", features = ["hybrid-sleep"] }
-simple_logger = { version = "2.1.0", default-features = false, features = ["stderr", "colored"] }
+crossterm = { version = "0.27.0", features = ["event-stream"] }
+futures = { version = "0.3.30", features = ["executor"] }
+log = "0.4.20"
+nodi = { version = "1.0.3", features = ["hybrid-sleep"] }
+simple_logger = { version = "4.3.3", default-features = false, features = ["stderr", "colored"] }
 rand = "0.8.5"
-wild = "2.0.4"
+wild = "2.2.0"
 cfg-if = "1.0.0"
